BROKEN: updated substrate to polkadot-v0.9.30 and jakehemmerle subxt

--- a/crypto/server/Cargo.toml
+++ b/crypto/server/Cargo.toml
@@ -28,8 +28,8 @@ reqwest={ version="0.11", features=["json", "stream"] }
 # Substrate
 subxt             ={ package="subxt", git="https://github.com/jakehemmerle/subxt.git", branch="substrate-master" }
 parity-scale-codec="3.0.0"
-sp-keyring        ={ package="sp-keyring", git="https://github.com/paritytech/substrate", branch="master" }
-sp-core           ={ package="sp-core", git="https://github.com/paritytech/substrate", branch="master" }
+sp-keyring        ={ package="sp-keyring", git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.30" }
+sp-core           ={ package="sp-core", git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.30" }
 tofn              ={ git="https://github.com/Entropyxyz/tofn", branch="main" }
 
 # Entropy
