--- a/crypto/testing-utils/Cargo.toml
+++ b/crypto/testing-utils/Cargo.toml
@@ -7,9 +7,9 @@ edition="2021"
 
 [dependencies]
 subxt             ={ git="https://github.com/jakehemmerle/subxt.git", branch="substrate-master" }
-sp-keyring        ={ package="sp-keyring", git="https://github.com/paritytech/substrate", branch="master" }
+sp-keyring        ={ package="sp-keyring", git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.30" }
 project-root      ="0.2.2"
-sp-core           ={ package="sp-core", git="https://github.com/paritytech/substrate", branch="master" }
+sp-core           ={ package="sp-core", git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.30" }
 env_logger        ="0.9.0"
 log               ="0.4.14"
 which             ="4.0.2"
