--- a/node/rpc/Cargo.toml
+++ b/node/rpc/Cargo.toml
@@ -13,27 +13,27 @@ targets=["x86_64-unknown-linux-gnu"]
 [dependencies]
 jsonrpsee={ version="0.15.1", features=["server"] }
 # jsonrpc-core                  ="18.0.0"
-node-primitives={ version="2.0.0", git='https://github.com/paritytech/substrate.git', branch="master" }
-# pallet-contracts-rpc          ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="master" }
-pallet-mmr-rpc                ={ version="3.0.0", git='https://github.com/paritytech/substrate.git', branch="master" }
-pallet-transaction-payment-rpc={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="master" }
-sc-client-api                 ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="master" }
-sc-consensus-babe             ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="master" }
-sc-consensus-babe-rpc         ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="master" }
-sc-consensus-epochs           ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="master" }
-sc-chain-spec                 ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="master" }
-sc-finality-grandpa           ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="master" }
-sc-finality-grandpa-rpc       ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="master" }
-sc-rpc-api                    ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="master" }
-sc-rpc-spec-v2                ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="master" }
-sc-rpc                        ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="master" }
-sc-sync-state-rpc             ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="master" }
-sp-api                        ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="master" }
-sp-block-builder              ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="master" }
-sp-blockchain                 ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="master" }
-sp-keystore                   ={ version="0.12.0", git='https://github.com/paritytech/substrate.git', branch="master" }
-sp-consensus                  ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="master" }
-sp-consensus-babe             ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="master" }
-sp-runtime                    ={ version="6.0.0", git='https://github.com/paritytech/substrate.git', branch="master" }
-sc-transaction-pool-api       ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="master" }
-substrate-frame-rpc-system    ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="master" }
+node-primitives={ version="2.0.0", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+# pallet-contracts-rpc          ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+pallet-mmr-rpc                ={ version="3.0.0", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+pallet-transaction-payment-rpc={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+sc-client-api                 ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+sc-consensus-babe             ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+sc-consensus-babe-rpc         ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+sc-consensus-epochs           ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+sc-chain-spec                 ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+sc-finality-grandpa           ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+sc-finality-grandpa-rpc       ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+sc-rpc-api                    ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+sc-rpc-spec-v2                ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+sc-rpc                        ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+sc-sync-state-rpc             ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+sp-api                        ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+sp-block-builder              ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+sp-blockchain                 ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+sp-keystore                   ={ version="0.12.0", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+sp-consensus                  ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+sp-consensus-babe             ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+sp-runtime                    ={ version="6.0.0", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+sc-transaction-pool-api       ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+substrate-frame-rpc-system    ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
