--- a/pallets/free-tx/Cargo.toml
+++ b/pallets/free-tx/Cargo.toml
@@ -6,29 +6,29 @@ edition="2021"
 [dependencies]
 codec             ={ package="parity-scale-codec", version="3.0.0", default-features=false }
 scale-info        ={ version="2.1.1", default-features=false, features=["derive"] }
-sp-runtime        ={ git="https://github.com/paritytech/substrate", branch="master", default-features=false }
-sp-staking        ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
-frame-benchmarking={ git="https://github.com/paritytech/substrate", branch="master", optional=true, default-features=false }
-frame-support     ={ git="https://github.com/paritytech/substrate", branch="master", default-features=false }
-frame-system      ={ git="https://github.com/paritytech/substrate", branch="master", default-features=false }
-pallet-staking    ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
-sp-std            ={ git="https://github.com/paritytech/substrate", branch="master", default-features=false }
+sp-runtime        ={ git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.30", default-features=false }
+sp-staking        ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+frame-benchmarking={ git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.30", optional=true, default-features=false }
+frame-support     ={ git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.30", default-features=false }
+frame-system      ={ git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.30", default-features=false }
+pallet-staking    ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+sp-std            ={ git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.30", default-features=false }
 log               ={ version="0.4.0", default-features=false }
 
 [dev-dependencies]
-sp-core                        ={ git="https://github.com/paritytech/substrate", branch="master" }
-sp-io                          ={ git="https://github.com/paritytech/substrate", branch="master" }
-sp-tracing                     ={ version="5.0.0", git="https://github.com/paritytech/substrate", branch="master" }
-pallet-balances                ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
-pallet-session                 ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
-pallet-timestamp               ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
-pallet-bags-list               ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
-pallet-staking-reward-curve    ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
-sp-npos-elections              ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
-frame-election-provider-support={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
+sp-core                        ={ git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.30" }
+sp-io                          ={ git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.30" }
+sp-tracing                     ={ version="5.0.0", git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.30" }
+pallet-balances                ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+pallet-session                 ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+pallet-timestamp               ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+pallet-bags-list               ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+pallet-staking-reward-curve    ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+sp-npos-elections              ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+frame-election-provider-support={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
 pallet-staking-extension       ={ version="3.0.0", default-features=false, path="../staking" }
 pallet-relayer                 ={ version="3.0.0", default-features=false, path="../relayer" }
-pallet-authorship              ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
+pallet-authorship              ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
 
 [features]
 default=["std"]
