--- a/subxttest/Cargo.toml
+++ b/subxttest/Cargo.toml
@@ -7,7 +7,7 @@ edition="2018"
 
 [dependencies]
 subxt={ git="https://github.com/jakehemmerle/subxt.git", branch="substrate-master" }
-sp-keyring={ version="6.0.0", git='https://github.com/paritytech/substrate.git', branch="master" }
+sp-keyring={ version="6.0.0", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
 async-std={ version="1.9.0", features=["attributes", "tokio1"] }
 codec={ package="parity-scale-codec", version="3.0.0", default-features=false, features=[
   "derive",
