--- a/node/rpc/Cargo.toml
+++ b/node/rpc/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name      ="node-rpc"
+name      ="entropy-rpc"
 version   ="3.0.0-dev"
 authors   =["Parity Technologies <admin@parity.io>"]
 edition   ="2021"
