--- a/subxttest/Cargo.toml
+++ b/subxttest/Cargo.toml
@@ -6,7 +6,7 @@ edition="2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-subxt={ git="https://github.com/jakehemmerle/subxt.git", branch="substrate-master" }
+subxt={ git="https://github.com/entropyxyz/subxt.git", branch="substrate-master" }
 sp-keyring={ version="6.0.0", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
 async-std={ version="1.9.0", features=["attributes", "tokio1"] }
 codec={ package="parity-scale-codec", version="3.0.0", default-features=false, features=[
