--- a/crypto/server/Cargo.toml
+++ b/crypto/server/Cargo.toml
@@ -32,7 +32,7 @@ subxt             ={ package="subxt", git="https://github.com/entropyxyz/subxt.g
 parity-scale-codec="3.0.0"
 sp-keyring        ={ package="sp-keyring", git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.30" }
 sp-core           ={ package="sp-core", git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.30" }
-tofn              ={ git="https://github.com/Entropyxyz/tofn", branch="main" }
+tofn              ={ git="https://github.com/entropyxyz/tofn", branch="main" }
 
 # Entropy
 substrate-common={ path="../substrate-common", default-features=false }
