Upgrade Substrate to follow Polkadot releases (#207)
* PR #201 key association logic; to be reverted

* Revert "PR #201 key association logic; to be reverted"

This reverts commit 44a3ed2317e528284318a499f7930f08a0d37631.

* added types and comments for readability and clarity in staking-extension

* subxt points to temp branch with updated deps

* refactored server sp_core stuff to use subxt::ext::sp_core

* updated server to use subxt 0.24.0 (from 0.20.0)

* BROKEN: updated substrate to polkadot-v0.9.30 and jakehemmerle subxt

* update Event and Call to RuntimeEvent and RuntimeCall

* fix pallet-free-tx weights

* fix pallet-transaction-pause weights

* fix pallet-staking-extension weights

* updated mock runtimes and tests

still needs updated free-tx test since FRAME tx are transactional by default

* upgraded pallet-free-tx to substrate-polkadot 0.9.30

* pallets are all updated

* entropy-runtime tests pass with runtime-benchmarks

* handled client rpc and service...?

* entropy compiles and tests

* additional refactoring

* added entropy-executor

* entropy tests pass with runtime-benchmarks

* fixed testing-utils

* thanks jesse, fixed server, everything works

* clippy pt 1

* clippy pt 2

* fixing tests

* reenable extensions

* fixed a test

* updated runtime metadata

* added babe and grandpa to rpc

* jesse rocks; fixed subxt Config

* fmt

* clippy

* taplo

* fmt and clippy

* clippy

* updated deps

* updates

--- a/crypto/server/Cargo.toml
+++ b/crypto/server/Cargo.toml
@@ -24,15 +24,15 @@ futures="0.3"
 tokio  ={ version="1.16", features=["macros", "fs", "rt-multi-thread", "io-util"] }
 
 # HTTP
-rocket ={ version="0.5.0-rc.1", default-features=false, features=["json"] }
+rocket ={ version="0.5.0-rc.2", default-features=false, features=["json"] }
 reqwest={ version="0.11", features=["json", "stream"] }
 
 # Substrate
+subxt             ={ package="subxt", git="https://github.com/entropyxyz/subxt.git", branch="substrate-master" }
 parity-scale-codec="3.0.0"
-subxt             ={ git="https://github.com/paritytech/subxt.git" }
-sp-keyring        ="6.0.0"
-sp-core           ="6.0.0"
-tofn              ={ git="https://github.com/Entropyxyz/tofn", branch="main" }
+sp-keyring        ={ package="sp-keyring", git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.30" }
+sp-core           ={ package="sp-core", git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.30" }
+tofn              ={ git="https://github.com/entropyxyz/tofn", branch="main" }
 
 # Entropy
 substrate-common={ path="../substrate-common", default-features=false }
