--- a/node/cli/Cargo.toml
+++ b/node/cli/Cargo.toml
@@ -16,50 +16,62 @@ targets=['x86_64-unknown-linux-gnu']
 [[bin]]
 name='entropy'
 
-[build-dependencies.substrate-build-script-utils]
-git    ='https://github.com/paritytech/substrate.git'
-branch ="master"
-version='3.0.0'
-
 [dependencies]
-jsonrpc-core                ='18.0.0'
-structopt                   ='0.3.8'
-grandpa-primitives          ={ version="4.0.0-dev", package="sp-finality-grandpa", git='https://github.com/paritytech/substrate.git', branch="master" }
-hex-literal                 ="0.3.1"
-pallet-im-online            ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="master" }
-sc-chain-spec               ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="master" }
-serde                       ={ version="1.0.126", features=["derive"] }
-sp-authority-discovery      ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="master" }
-sp-consensus-babe           ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="master" }
-node-primitives             ={ version="2.0.0", git='https://github.com/paritytech/substrate.git', branch="master" }
-rand                        ="0.7.2"
-sc-sync-state-rpc           ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="master" }
-futures                     ="0.3.16"
-node-executor               ={ version="3.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="master" }
-sc-consensus-babe           ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="master" }
-sc-network                  ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="master" }
-grandpa                     ={ version="0.10.0-dev", package="sc-finality-grandpa", git='https://github.com/paritytech/substrate.git', branch="master" }
-node-rpc                    ={ version="3.0.0-dev", path="../rpc" }
-sc-consensus-slots          ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="master" }
-sp-transaction-storage-proof={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="master" }
-sc-authority-discovery      ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="master" }
-sp-authorship               ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="master" }
-sc-consensus-uncles         ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="master" }
-sc-consensus-babe-rpc       ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="master" }
-sc-consensus-epochs         ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="master" }
-sc-finality-grandpa-rpc     ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="master" }
-sp-keystore                 ={ version="0.12.0", git='https://github.com/paritytech/substrate.git', branch="master" }
-clap                        ={ version="3.0", features=["derive"] }
+jsonrpc-core                      ='18.0.0'
+clap                              ={ version="3.1.18", features=["derive"] }
+codec                             ={ package="parity-scale-codec", version="3.0.0" }
+structopt                         ='0.3.8'
+grandpa-primitives                ={ version="4.0.0-dev", package="sp-finality-grandpa", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+hex-literal                       ="0.3.1"
+pallet-im-online                  ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+sc-chain-spec                     ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+serde                             ={ version="1.0.126", features=["derive"] }
+sp-authority-discovery            ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+sp-consensus-babe                 ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+node-primitives                   ={ version="2.0.0", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+rand                              ="0.7.2"
+sc-sync-state-rpc                 ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+futures                           ="0.3.16"
+sc-consensus-babe                 ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+sc-network                        ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+sc-network-common                 ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+sc-consensus-slots                ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+sp-transaction-storage-proof      ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+sc-authority-discovery            ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+sp-authorship                     ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+sc-consensus-uncles               ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+sc-consensus-babe-rpc             ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+sc-consensus-epochs               ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+sc-finality-grandpa               ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+sc-finality-grandpa-rpc           ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+sp-keystore                       ={ version="0.12.0", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+jsonrpsee                         ={ version="0.15.1", features=["server"] }
+sp-inherents                      ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+sp-keyring                        ={ version="6.0.0", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+frame-system                      ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+frame-system-rpc-runtime-api      ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+pallet-transaction-payment        ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+pallet-free-tx                    ={ version="3.0.0-monthly-2021-10", path="../../pallets/free-tx" }
+node-inspect                      ={ version="0.9.0-dev", optional=true, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+substrate-frame-cli               ={ version="4.0.0-dev", optional=true, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+sc-sysinfo                        ={ version="6.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+substrate-state-trie-migration-rpc={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+
+[build-dependencies]
+clap                        ={ version="3.1.18", optional=true }
+clap_complete               ={ version="3.0", optional=true }
+node-inspect                ={ version="0.9.0-dev", optional=true, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+substrate-build-script-utils={ version="3.0.0", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+substrate-frame-cli         ={ version="4.0.0-dev", optional=true, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+try-runtime-cli             ={ version="0.10.0-dev", optional=true, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+sc-cli                      ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+pallet-balances             ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+
+sc-service-test={ version="2.0.0", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
 
 [dev-dependencies]
-sc-service-test           ={ version="2.0.0", git='https://github.com/paritytech/substrate.git', branch="master" }
-sp-inherents              ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="master" }
-sp-keyring                ={ version="6.0.0", git='https://github.com/paritytech/substrate.git', branch="master" }
-sp-tracing                ={ version="5.0.0", git='https://github.com/paritytech/substrate.git', branch="master" }
-frame-system              ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="master" }
-pallet-transaction-payment={ version="4.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="master" }
-tempfile                  ="3.1.0"
-pallet-free-tx            ={ version="3.0.0-monthly-2021-10", path="../../pallets/free-tx" }
+sc-service-test={ version="2.0.0", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
+tempfile       ="3.1.0"
 
 [dependencies.entropy-runtime]
 path   ='../../runtime'
@@ -67,132 +79,136 @@ version='3.0.0-monthly-2021-10'
 
 [dependencies.frame-benchmarking]
 git    ='https://github.com/paritytech/substrate.git'
-branch ="master"
+branch ="polkadot-v0.9.30"
 version='4.0.0-dev'
 
 [dependencies.frame-benchmarking-cli]
 git    ='https://github.com/paritytech/substrate.git'
-branch ="master"
+branch ="polkadot-v0.9.30"
 version='4.0.0-dev'
 
 [dependencies.pallet-transaction-payment-rpc]
 git    ='https://github.com/paritytech/substrate.git'
-branch ="master"
+branch ="polkadot-v0.9.30"
 version='4.0.0-dev'
 
 [dependencies.sc-basic-authorship]
 git    ='https://github.com/paritytech/substrate.git'
-branch ="master"
+branch ="polkadot-v0.9.30"
 version='0.10.0-dev'
 
 [dependencies.sc-cli]
 features=['wasmtime']
 git     ='https://github.com/paritytech/substrate.git'
-branch  ="master"
+branch  ="polkadot-v0.9.30"
 version ='0.10.0-dev'
 
 [dependencies.sc-client-api]
 git    ='https://github.com/paritytech/substrate.git'
-branch ="master"
+branch ="polkadot-v0.9.30"
 version='4.0.0-dev'
 
 [dependencies.sc-consensus]
 git    ='https://github.com/paritytech/substrate.git'
-branch ="master"
+branch ="polkadot-v0.9.30"
 version='0.10.0-dev'
 
 [dependencies.sc-consensus-aura]
 git    ='https://github.com/paritytech/substrate.git'
-branch ="master"
+branch ="polkadot-v0.9.30"
 version='0.10.0-dev'
 
 [dependencies.sc-executor]
 features=['wasmtime']
 git     ='https://github.com/paritytech/substrate.git'
-branch  ="master"
+branch  ="polkadot-v0.9.30"
 version ='0.10.0-dev'
 
 [dependencies.sc-keystore]
 git    ='https://github.com/paritytech/substrate.git'
-branch ="master"
+branch ="polkadot-v0.9.30"
 version='4.0.0-dev'
 
 [dependencies.sc-rpc]
 git    ='https://github.com/paritytech/substrate.git'
-branch ="master"
+branch ="polkadot-v0.9.30"
 version='4.0.0-dev'
 
 [dependencies.sc-rpc-api]
 git    ='https://github.com/paritytech/substrate.git'
-branch ="master"
+branch ="polkadot-v0.9.30"
 version='0.10.0-dev'
 
 [dependencies.sc-service]
 features=['wasmtime']
 git     ='https://github.com/paritytech/substrate.git'
-branch  ="master"
+branch  ="polkadot-v0.9.30"
 version ='0.10.0-dev'
 
 [dependencies.sc-telemetry]
 git    ='https://github.com/paritytech/substrate.git'
-branch ="master"
+branch ="polkadot-v0.9.30"
 version='4.0.0-dev'
 
 [dependencies.sc-transaction-pool]
 git    ='https://github.com/paritytech/substrate.git'
-branch ="master"
+branch ="polkadot-v0.9.30"
 version='4.0.0-dev'
 
 [dependencies.sc-transaction-pool-api]
 git    ='https://github.com/paritytech/substrate.git'
-branch ="master"
+branch ="polkadot-v0.9.30"
 version='4.0.0-dev'
 
 [dependencies.sp-api]
 git    ='https://github.com/paritytech/substrate.git'
-branch ="master"
+branch ="polkadot-v0.9.30"
 version='4.0.0-dev'
 
 [dependencies.sp-block-builder]
 git    ='https://github.com/paritytech/substrate.git'
-branch ="master"
+branch ="polkadot-v0.9.30"
 version='4.0.0-dev'
 
 [dependencies.sp-blockchain]
 git    ='https://github.com/paritytech/substrate.git'
-branch ="master"
+branch ="polkadot-v0.9.30"
 version='4.0.0-dev'
 
 [dependencies.sp-consensus]
 git    ='https://github.com/paritytech/substrate.git'
-branch ="master"
+branch ="polkadot-v0.9.30"
 version='0.10.0-dev'
 
 [dependencies.sp-consensus-aura]
 git    ='https://github.com/paritytech/substrate.git'
-branch ="master"
+branch ="polkadot-v0.9.30"
 version='0.10.0-dev'
 
 [dependencies.sp-core]
 git    ='https://github.com/paritytech/substrate.git'
-branch ="master"
+branch ="polkadot-v0.9.30"
 version='6.0.0'
 
 [dependencies.sp-runtime]
 git    ='https://github.com/paritytech/substrate.git'
-branch ="master"
+branch ="polkadot-v0.9.30"
 version='6.0.0'
 
 [dependencies.sp-timestamp]
 git    ='https://github.com/paritytech/substrate.git'
-branch ="master"
+branch ="polkadot-v0.9.30"
 version='4.0.0-dev'
 
 [dependencies.substrate-frame-rpc-system]
 git    ='https://github.com/paritytech/substrate.git'
-branch ="master"
+branch ="polkadot-v0.9.30"
 version='4.0.0-dev'
 
 [features]
-default           =[]
-runtime-benchmarks=['entropy-runtime/runtime-benchmarks']
+default=[]
+runtime-benchmarks=[
+  'entropy-runtime/runtime-benchmarks',
+  "frame-benchmarking/runtime-benchmarks",
+  "frame-benchmarking-cli/runtime-benchmarks",
+]
