parsing basic evm tx

--- a/crypto/server/Cargo.toml
+++ b/crypto/server/Cargo.toml
@@ -36,9 +36,9 @@ sp-core           ={ package="sp-core", git="https://github.com/paritytech/subst
 tofn              ={ git="https://github.com/entropyxyz/tofn", branch="main" }
 
 # Entropy
-substrate-common={ path="../substrate-common", default-features=false }
-kvdb            ={ path="../kvdb", default-features=false }
-constraints     ={ path="../constraints" }
+substrate-common   ={ path="../substrate-common", default-features=false }
+kvdb               ={ path="../kvdb", default-features=false }
+entropy-constraints={ path="../constraints" }
 
 # Logging
 log               ="0.4.17"                                          # todo: remove, overlaps tracing
