--- a/crypto/constraints/Cargo.toml
+++ b/crypto/constraints/Cargo.toml
@@ -13,6 +13,7 @@ serde           ="1.0.147"
 serde_json      ="1.0"
 serde_derive    ="1.0.147"
 substrate-common={ path="../substrate-common", default-features=false }
+sp-core         ={ git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.30" }
 
 # EVM
 web3={ version="0.17.0", default-features=false }
