--- a/pallets/propagation/Cargo.toml
+++ b/pallets/propagation/Cargo.toml
@@ -41,6 +41,7 @@ version         ='4.0.0-dev'
 [dependencies]
 pallet-authorship       ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
 pallet-relayer          ={ version="3.0.0", default-features=false, path="../relayer" }
+pallet-constraints      ={ default-features=false, path="../constraints" }
 pallet-staking-extension={ version="3.0.0", default-features=false, path="../staking" }
 
 scale-info={ version="2.0.1", default-features=false, features=["derive"] }
@@ -80,6 +81,7 @@ std=[
   'frame-benchmarking/std',
   'pallet-authorship/std',
   'pallet-staking-extension/std',
+  'pallet-constraints/std',
   'pallet-balances/std',
   'pallet-babe/std',
   "sp-io/std",
