On session benchmarks (#260)
* session handler benchmarking

* remove unneeded crates

* fmt

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,11 +2,4 @@
 panic='unwind'
 
 [workspace]
-members=[
-  'crypto/*',
-  'node/*',
-  'pallets/*',
-  'runtime',
-  # 'alice-send',
-  # 'subxttest'
-]
+members=['crypto/*', 'node/*', 'pallets/*', 'runtime']
